--- a/stm32g431_injeted_adc_test.ioc
+++ b/stm32g431_injeted_adc_test.ioc
@@ -2,32 +2,41 @@
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
 ADC1.EnableInjectedConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T1_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,EnableInjectedConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv,DMAContinuousRequests,InjectedRank-6\#ChannelInjectedConversion,InjectedChannel-6\#ChannelInjectedConversion,InjectedSamplingTime-6\#ChannelInjectedConversion,InjectedOffsetNumber-6\#ChannelInjectedConversion,InjNumberOfConversion,InjectedRank-7\#ChannelInjectedConversion,InjectedChannel-7\#ChannelInjectedConversion,InjectedSamplingTime-7\#ChannelInjectedConversion,InjectedOffsetNumber-7\#ChannelInjectedConversion,injectedQueueMode,EOCSelection,master,Rank2_Channel
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,EnableInjectedConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv,DMAContinuousRequests,InjectedRank-6\#ChannelInjectedConversion,InjectedChannel-6\#ChannelInjectedConversion,InjectedSamplingTime-6\#ChannelInjectedConversion,InjectedOffsetNumber-6\#ChannelInjectedConversion,InjNumberOfConversion,InjectedRank-7\#ChannelInjectedConversion,InjectedChannel-7\#ChannelInjectedConversion,InjectedSamplingTime-7\#ChannelInjectedConversion,InjectedOffsetNumber-7\#ChannelInjectedConversion,injectedQueueMode,EOCSelection,master,Rank2_Channel,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,Rank1_Channel
 ADC1.InjNumberOfConversion=2
-ADC1.InjectedChannel-6\#ChannelInjectedConversion=ADC_CHANNEL_11
-ADC1.InjectedChannel-7\#ChannelInjectedConversion=ADC_CHANNEL_12
+ADC1.InjectedChannel-6\#ChannelInjectedConversion=ADC_CHANNEL_1
+ADC1.InjectedChannel-7\#ChannelInjectedConversion=ADC_CHANNEL_1
 ADC1.InjectedOffsetNumber-6\#ChannelInjectedConversion=ADC_OFFSET_NONE
 ADC1.InjectedOffsetNumber-7\#ChannelInjectedConversion=ADC_OFFSET_NONE
 ADC1.InjectedRank-6\#ChannelInjectedConversion=1
 ADC1.InjectedRank-7\#ChannelInjectedConversion=2
-ADC1.InjectedSamplingTime-6\#ChannelInjectedConversion=ADC_SAMPLETIME_12CYCLES_5
-ADC1.InjectedSamplingTime-7\#ChannelInjectedConversion=ADC_SAMPLETIME_12CYCLES_5
-ADC1.NbrOfConversion=3
+ADC1.InjectedSamplingTime-6\#ChannelInjectedConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.InjectedSamplingTime-7\#ChannelInjectedConversion=ADC_SAMPLETIME_6CYCLES_5
+ADC1.NbrOfConversion=5
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-8\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-9\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-4\#ChannelRegularConversion=2
 ADC1.Rank-5\#ChannelRegularConversion=3
-ADC1.Rank2_Channel=ADC_CHANNEL_12
+ADC1.Rank-8\#ChannelRegularConversion=4
+ADC1.Rank-9\#ChannelRegularConversion=5
+ADC1.Rank1_Channel=ADC_CHANNEL_1
+ADC1.Rank2_Channel=ADC_CHANNEL_1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.injectedQueueMode=DISABLE
 ADC1.master=1
 DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
@@ -95,7 +104,7 @@ Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
-MxCube.Version=5.6.0
+MxCube.Version=5.6.1
 MxDb.Version=DB.5.0.60
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -199,8 +208,8 @@ SH.COMP_DAC11_group.ConfNb=1
 SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2
 SH.COMP_DAC12_group.ConfNb=1
 TIM1.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger
-TIM1.PeriodNoDither=1000
-TIM1.Prescaler=1000
+TIM1.PeriodNoDither=10
+TIM1.Prescaler=100
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM15.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger
 TIM15.PeriodNoDither=1000
